fixed spacing issue on desktop nav

--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,14 @@ body {
 }
 
 .mobile-nav {
+    padding: 1rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .desktop-nav {
     display: none;
+    text-align: center;
 }
 
 .side-menu {
@@ -57,7 +59,11 @@ body {
     display: flex;
     gap: 3rem;
     padding-left: 4rem;
+}
 
+.desktop-options-list li{
+    list-style: none;
+    margin-top: 1rem;
 }
 .desktop-options-list a{
     text-decoration: none;
@@ -129,6 +135,11 @@ body {
     margin-bottom: 0;
 } */
 
+
+.desktop-option-with-dropdown:hover .dropdown{
+    opacity: 1;
+}
+
 .option-with-dropdown:hover .dropdown {
     opacity: 1;
     height: fit-content;
@@ -137,13 +148,6 @@ body {
 /* .option-with-dropdown:hover .dropdown li {
     margin-bottom: 1.5rem;
 } */
-
-
-header {
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-}
 
 .menu-button {
     border: none;
@@ -253,20 +257,31 @@ header {
 @media screen and (min-width: 800px) {
     .page {
         display: grid;
+        grid-template-columns: 1fr 1fr;
         grid-template-areas:"content hero";
+        padding: 0 6rem;
+        column-gap: 1.5rem;
     }
     .mobile-nav {
         display: none;
     }
     .desktop-nav {
-        width: 100%;
+        width: 97%;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 1rem;
     }
     .nav-dropdowns{
         display: flex;
     }
+   .desktop-options-list{
+    display: flex;
+    justify-content: space-around;
+   }
+   .dropdown{
+    margin-left: -1.5rem;
+   }
     .nav-buttons{
         display: flex;
     }
@@ -276,11 +291,25 @@ header {
     }
     .content {
         grid-area: content;
+        padding-top: 10%;
     }
     .hero {
         grid-area: hero;
-        height: 100%;
         content: url('./images/image-hero-desktop.png');
+    }
+
+    .title {
+        font-size: 5rem;
+        text-align: left;
+    }
+
+    .sub-text {
+        font-size: 1.5rem;
+        text-align: left;
+    }
+
+    .test {
+        padding: 0 1rem;
     }
     
 }
